# cmpt-276-Swagile-Pro

./: CMakeLists.txt  README.md  issue_maint.h  issue_manag.h  product_maint.h  queries.txt  user_maint.h
include/: create_report.h  database_connection.h  globals.h  issue_manag.h  issue_queries.h  macros.h  product_maint.h  product_queries.h  query_results.h  report_queries.h  ui.h  user_maint.h  user_queries.h
src/: create_report.cpp  database_connection.cpp  globals.cpp  issue_manag.cpp  issue_queries.cpp  main.cpp  perf_test.cpp  product_maint.cpp  product_queries.cpp  report_queries.cpp  stress_test.cpp  swagile_pro  swagile_pro.db  tables.txt  testFileOps.cpp  ui.cpp  unitTestForMain.cpp  user_maint.cpp  user_queries.cpp  usery_queries.cpp
